plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/catchWithoutParameter.kt
internal object Test {
    @JvmStatic
    fun main(args: Array<String>) {
        try {
        } catch (NO_NAME_PROVIDED) {
        }
    }
}
